--- a/.github/workflows/deploy_sphinx.yaml
+++ b/.github/workflows/deploy_sphinx.yaml
@@ -33,4 +33,4 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_branch: gh-pages-publish
-        publish_dir: ./docs/_build/html
+        publish_dir: ./docs/build/html
